# python-material-icons

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
examples/: pygame-gallery.py
material_icons/: MaterialIcons.py  __init__.py
scripts/: fetch_icons.py
